--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@types/sockjs-client": "^1.5.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
     "sockjs-client": "^1.6.0",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
