--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,10 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "no-unused-vars": ["warn", {
+            "argsIgnorePattern": "^_",
+            "varsIgnorePattern": "^_",
+            "caughtErrorsIgnorePattern": "^_"}],
         "semi": ["error", "always"]
     }
 }
