--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-usestateref": "^1.0.8",
     "sockjs-client": "^1.6.0",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
